# Esp-idf-project-

./: .gitignore  CLAUDE.md  CMakeLists.txt  tree.txt
main/: CMakeLists.txt  command_handler.c  command_handler.h  main.c  ota_update.c  ota_update.h
